# space_war

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README  bullet.cpp  bullet.h  enemy.cpp  enemy.h  game.cpp  myrect.cpp  myrect.h  res.qrc  score.cpp  space_war.pro
include/: game.h  health.h  myrect.h  score.h
src/: bullet.cpp  enemy.cpp  game.cpp  health.cpp  main.cpp  myrect.cpp  score.cpp
